# sekai-chisei

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  VISION.md  build.rs
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security-audit.yml
examples/: README.md  demo_client.rs
proto/: chisei.proto  llm.proto  sekai.proto
src/: config.rs  domain.rs  lib.rs  main.rs
src/chisei/: affinity.rs  budget.rs  egress.rs  eval.rs  evolve.rs  mod.rs  model_routing.rs  pipeline.rs  policy.rs  sampling.rs  scoring.rs
src/db/: chisei.rs  mod.rs  sekai.rs
src/grpc/: chisei_service.rs  llm_service.rs  mod.rs  sekai_service.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/sekai/: action.rs  audit.rs  capacity.rs  compute.rs  coordination.rs  dataset.rs  escalation.rs  function.rs  learning.rs  lineage.rs  mod.rs  observation.rs  propagation.rs  query.rs  schema.rs  security.rs  sentinel.rs  skillextract.rs
tests/: ollama_e2e.rs
