[package]
name = "sekai-chisei"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "Local-first Rust control plane for policy-governed AI-assisted software delivery."

[dependencies]
# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client (for LLM providers)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
subtle = "2"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
